crates/paceflow/tests/snapshots/metrics_regression__fixture_corpus_change_report_text.snap
---
source: tests/metrics_regression.rs
expression: change
---
Delivery Metrics
Commits analyzed: 9
Heavy commits: 3 (33.33% of commits)

┌────────────────┬───────────────┬─────────────┐
│ Signal         │ Value         │ Status      │
├────────────────┼───────────────┼─────────────┤
│ Mainline Reach │ 100.00% (3/3) │ good        │
│ PR reach       │ N/A           │ unavailable │
│ PR merge       │ N/A           │ unavailable │
│ Mainline lead  │ N/A           │ unavailable │
└────────────────┴───────────────┴─────────────┘

Legend:
- Heavy commits: commits where matched AI-attributed lines are at least half of changed lines.
- GitHub PR lookup coverage: heavy commits on github.com with completed lookup (resolved or no PR) vs all heavy commits on github.com.
- PR reach: among completed lookups, share where a pull request existed.
- Mainline reach: share of heavy AI commits that later reached mainline.
- Mainline lead: average hours from commit time to mainline reach for heavy merged commits (prefer later mainline_reached_at, else later PR merged_at).
- PR merge: among PR-linked commits with completed lookup, share whose PR merged.
- PR reach / merge show N/A when no GitHub-heavy commits or no completed lookups yet.
- Status: higher is better for all delivery signals.
