crates/paceflow/tests/snapshots/metrics_regression__fixture_corpus_lifecycle_grouped_by_repo_text.snap
---
source: tests/metrics_regression.rs
expression: lifecycle_grouped
---
Quality Metrics

Repo                             Heavy    Churn Rate    Bug Rate   Revert Rate
__REPO_PACEFLOW__                    3          1.5%       33.3%          0.0%

Legend:
- Churn Rate, Bug Rate, and Revert Rate = percentage rates.
