crates/paceflow/tests/snapshots/metrics_regression__fixture_corpus_session_report_structured.snap
---
source: tests/metrics_regression.rs
expression: structured_session
---
sessions: "4"
average_user_prompts: "33.50"
avg_time_to_first_accepted_change_minutes: 160.19 min
debug_loop_rate: 0.00% (0/4)
s6_rate: 50.00% (2/4)
s9_rate: 75.00% (3/4)
no_output_session_rate: 0.00% (0/4)
